# scavengerHunt

./: .editorconfig  .gitignore  CLAUDE.md  Jenkinsfile  LICENSE  README.md  allfileshas.txt  attraction_Retrieval.py  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  env.template  geo_Convert.py  osm_Retrieve.py  plan.md  pom.xml  requirement.txt  start.sh  testMapping.py
.cursor/rules/: general-rule.mdc
backend/: .dockerignore  .gitignore  Dockerfile  pom.xml  rebuild-backend.sh
doc/: android-build-issues-handover.md  deployment.md  deployment_Demo.md  first-person-fixes.md
json/: museums_in_cork.json  output.geojson
mobile/: .gitignore  App.tsx  app.config.js  app.json  package-lock.json  package.json  react-native.config.js
mobile/app/: game.tsx  settings.tsx
mobile/components/: AnswerResult.tsx  AnswerResultModel.tsx  FloatingActionButton.tsx  GameHUD.tsx  LandmarkPolygon.tsx  RiddleBubble.tsx  ViewCone.tsx
mobile/hooks/: useGameSession.ts  useLocation.ts  useUser.ts  userGameSession.ts
mobile/services/: client.ts  storageService.ts
mobile/styles/: bubbleStyles.ts  commonStyles.ts  mapStyles.ts  resultStyles.ts  theme.ts
mobile/types/: index.ts
mobile/utils/: calculateDistance.ts  constants.ts
scripts/: ci-e2e-game-flow-test.sh  ci-smoke-test.sh  init-mongo.js
services/landmark-processor/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inject_way.py  landmark_meta_generator.py  landmark_preprocessor.py  main.py  pyproject.toml  requirements.txt
services/landmark-processor/tests/: test_landmark_preprocessor.py
(+122 files in other folders)
