[project]
name = "landmark-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "dotenv==0.9.9",
    "flask==3.1.1",
    "geographiclib==2.0",
    "geopy==2.4.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "markupsafe==3.0.2",
    "nominatim==0.1",
    "openai==1.99.1",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pymongo==4.14.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-flask==1.3.0",
    "pytest-mock==3.14.0",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
    "wikipedia==1.4.0",
]
